8309268: C2: "assert(in_bb(n)) failed: must be" after JDK-8306302