src/hotspot/share/opto/superword.cpp
@@ -3707,8 +3707,12 @@ void SuperWord::compute_vector_element_type() {
       assert(nn->is_Cmp(), "always have Cmp above Bool");
     }
     if (nn->is_Cmp() && nn->in(0) == nullptr) {
-      nn = nn->in(1);
-      set_velt_type(n, velt_type(nn));
+      // One of the inputs must be in_bb, pick that velt_type
+      if (in_bb(nn->in(1))) {
+        set_velt_type(n, velt_type(nn->in(1)));
+      } else {
+        set_velt_type(n, velt_type(nn->in(2)));
+      }
     }
   }
 #ifndef PRODUCT
